gcc/testsuite/rust/rustc/ui/malformed/malformed-plugin-1.rs
#![feature(plugin)]
#![plugin] // { dg-error "" "" { target *-*-* } }
// { dg-warning "" "" { target *-*-* } .-2 }

fn main() {}

